style.css
@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");

body {
  font-family: "Patrick Hand", cursive;
  overflow: hidden;
  font-size: 17px;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.profile-card {
  max-width: 680px;
  min-width: 280px;
  margin: 20px auto;
  padding: 0 20px;
}

.info-box {
  display: flex;
  column-gap: 15px;
  row-gap: 5px;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  border: 1px solid rgba(0, 0, 0, 0.6);
  border-radius: 0 0 5px 5px;
  padding: 25px 10px;
  box-shadow: 6px 0 15px rgba(0, 0, 0, 0.4);
}

.second-column {
  flex: 1;
  min-width: 220px;
}

h1 {
  font-size: 27px;
  line-height: 1.1;
  color: #0575cc;
}

h2 {
  font-size: 23px;
  line-height: 1.1;
  color: #e6603c;
}

p {
  margin-block: 10px;
}

.skills-box {
  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
  border-right: 1px solid rgba(0, 0, 0, 0.6);
  border-left: 1px solid rgba(0, 0, 0, 0.6);
  display: flex;
  justify-content: center;
  gap: 10px;
  flex-wrap: wrap;
  padding: 10px 50px;
  width: 95%;
  margin: 0 auto;
  border-radius: 0 0 5px 5px;
  position: relative;
  box-shadow: 6px 0 15px rgba(0, 0, 0, 0.4);
  background-color: #fff;
  z-index: 1;
}

button {
  background-color: transparent;
  border: none;
}

#menu {
  position: absolute;
  right: 0;
  bottom: 4px;
  margin-right: 10px;
  cursor: pointer;
  transition-duration: 0.5s;
  animation: blinker 1s step-end 1;
  filter: invert(62%) sepia(80%) saturate(4867%) hue-rotate(340deg)
    brightness(98%) contrast(84%);
}

.menu-toggle {
  transform: rotate(-90deg);
}

.social-media-box {
  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
  border-left: 1px solid rgba(0, 0, 0, 0.6);
  border-right: 1px solid rgba(0, 0, 0, 0.6);
  width: 86%;
  margin: 0 auto;
  border-radius: 0 5px 5px 5px;
  list-style-type: none;
  box-shadow: 0.2rem 0.2rem #111827;
  transform: rotate(-2deg);
  position: relative;
  top: -10px;
}

.social-media-box li {
  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
}

.social-media-box li:last-child {
  border-bottom: 0;
}

.social-media-box a {
  display: inline-block;
  width: 100%;
  padding: 10px;
  text-decoration: none;
  color: #000;
  text-align: center;
  font-size: 21px;
}

.social-media-box a:first-child {
  padding-top: 15px;
}

.social-media-box a:hover {
  background-color: #e6603c;
  color: #fff;
}

.closed {
  overflow: hidden;
  max-height: 0;
  transition: all 0.8s ease;
  will-change: transform;
}

.open {
  max-height: 250px;
  overflow: hidden;
  transition: all 0.8s ease;
}

@keyframes blinker {
  50% {
    opacity: 0;
  }
}

@media only screen and (max-width: 320px) {
  .second-column {
    min-width: 156px;
  }
}

.codepen-footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 99;
  background-color: #232323;
  color: white;
  text-align: center;
  height: 38px;
  font-size: 21px;
  display: flex;
  justify-content: space-between;
  padding: 6px 20px;
}

.codepen-footer a {
  color: #ee7344;
  text-decoration: none;
}

